force-app/main/default/objects/Contract_Setting__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Cost Reimbursement</fullName>
            </value>
            <value>
                <fullName>Cost-Plus</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>