force-app/main/default/objects/Contract_Setting__c/fields/Program_Director__c.field-meta.xml
<CustomField>
    <fullName>Program_Director__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>