force-app/main/default/objects/Contract_Setting__c/fields/Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>